# qualtrutils

./: .gitignore  LICENSE  README.md  anaconda.sh  clean.sh  generate_docs.sh  meta.jinja.yaml  meta.py  pypi.sh  requirements.txt  setup.cfg  setup.py
.github/workflows/: manual.yml  pdoc-publish.yml  pdoc3-publish.yml  pip-publish.yml  python-test.yml  release.yml  tests.yml
docs/: index.html
docs/qualtrutils/: index.html  qualtrics.html
docs/templates/: config.mako
qualtrutils/: __init__.py  qualtrics.py
src/qualtrutils/: __init__.py  qualtrics.py
tests/: test_qualtrics.py
