[metadata]
name = qualtrutils
version = 0.1.4
author = Emanuele Albini

description = A simple package to interact with the Qualtrics API
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/emanuele-albini/qualtrutils
project_urls =
    Documentation = https://emanuele-albini.github.io/qualtrutils
    Source Code = https://github.com/emanuele-albini/qualtrutils
    Bug Tracker = https://github.com/emanuele-albini/qualtrutils/issues
    Author Website = https://www.emanuelealbini.com

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License

keywords =
    Qualtrics
    API
    surveys
    survey

platform = any

[options]
include_package_data = True
package_dir = 
    = src
packages = find:

python_requires = >=3.6
install_requires =
    tqdm
    toml
    requests

[options.packages.find]
where = src
